# CPPSortingVisualizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  my_program  tests
lib/includes/: Runner.h  Sorter.h  element.h
lib/includes/prebuiltSorters/: IntegerSorter.h  LexicographicSorter.h
lib/includes/sortImplementations/: BubbleSort.h  SelectionSort.h
lib/src/prebuiltSorters/: IntegerSorter.cpp  LexicographicSorter.cpp
test/: projectTest.cpp
